--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,23 @@
 {
   "name": "swiftx/ioc",
-  "description": "PHP依赖注入框架",
-  "minimum-stability": "stable",
+  "type": "library",
+  "description": "PHP依赖注入框架Ioc组件",
+  "keywords": ["Ioc","Swiftx"],
+  "homepage": "https://github.com/Swiftx/Ioc",
+  "license": "GPL",
   "authors": [
     {
-      "name" : "Hismer",
-      "email": "odaytudio@gmail.com"
+      "name" : "胡永强",
+      "email": "odaytudio@gmail.com",
+      "role" : "Developer"
     }
   ],
   "require": {
-    "Swiftx/Common": "1.0.*"
+    "php": ">=5.6.0"
   },
   "autoload": {
     "psr-4": {
-      "Swiftx\\Ioc\\": "library/",
-      "Swiftx\\Ioc\\Plugin": "plugins/"
+      "Swiftx\\Ioc\\": "library/"
     }
   }
 }
